--- a/Notebooks/MarkovChainMonteCarloSampling.ipynb
+++ b/Notebooks/MarkovChainMonteCarloSampling.ipynb
@@ -102,22 +102,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Δειγματοληψία με MCMC\n",
-    "Είδαμε παραπάνω ότι η μέθοδος της απόρριψης δεν είναι πρακτική για να κάνουμε δειγματοληψία από μια σφαίρα μεγάλων διαστάσεων. Θα δούμε τώρα πώς μπορούμε να λύσουμε αυτό το πρόβλημα χρησιμοποιώντας ιδέες από τις μαρκοβιανές αλυσίδες (Markov Chain Monte Carlo- MCMC)\n",
+    "#### Sampling with MCMC\n",
+    "The rejection method is not practical for sampling from a large-dimensional sphere. This problem can be solved using ideas from Markov Chain Monte Carlo (MCMC)\n",
     "\n",
-    "Συγκεκριμένα, για μια μη υποβιβάσιμη μαρκοβιανή αλυσίδα με συμμετρικές πιθανότητες μετάβασης η μοναδική αναλλοίωτη κατανομή είναι η ομοιόμορφη κατανομή στον χώρο των καταστάσεων. Πράγματι, επειδή οι πιθανότητες μετάβασης είναι συμμετρικές ο πίνακας πιθανοτήτων μετάβασης θα είναι διπλά στοχαστικός και το ζητούμενο προκύπτει όπως στο Παράδειγμα 42 του Κεφαλαίου 5 του βιβλίου. Επομένως, προκειμένου να επιλέξουμε τυχαία ένα σημείο από ένα χωρίο $D$, μπορούμε να θεωρήσουμε μια μαρκοβιανή αλυσίδα που εξελίσσεται στο $D$, έχει συμμετρικές πιθανότητες μετάβασης και να την αφήσουμε να κάνει αρκετά βήματα ώστε να έρθει κοντά στην κατάσταση ισορροπίας της. \n",
+    "In particular, for a irreducible Markov chain with symmetric transition probabilities, the only invariant distribution is the uniform distribution in state space. Indeed, because the transition probabilities are symmetric the transition probability matrix will be doubly stochastic. Therefore, in order to randomly select a point from a space $D$, we can consider a Markovian chain that evolves in $D$, has symmetric transition probabilities and let it take enough steps to come close to its equilibrium state. \n",
     "\n",
-    "Ένας τρόπος να το πετύχουμε αυτό είναι ο εξής. Έστω $X_n= x\\in D$. Θα δοκιμάσουμε να μετακινηθούμε κατά $z$ όπου η κατανομή του βήματος $z$ είναι συμμετρική γύρω από το 0. Αν το σημείο $x+z$ παραμένει μέσα στο $D$ θα πραγματοποιήσουμε τη μετακίνηση, θα ορίσουμε δηλαδή $X_{n+1}=x+z$, διαφορετικά θα παραμείνουμε στο $x$, θα ορίσουμε δηλαδή $X_{n+1}=x$. Πεισθείτε ότι αυτός ο μηχανισμός παράγει συμμετρικές πιθανότητες μετάβασης.\n",
+    "One way to achieve this is as follows. Let $X_n= x\\in D$. We will try to move by $z$ where the step distribution $z$ is symmetric around 0. If the point $x+z$ remains inside $D$ we will make the move, i.e. we will define $X_{n+1}=x+z$, otherwise we will remain in $x$, i.e. we will define $X_{n+1}=x$. Convince yourself that this mechanism produces symmetric transition probabilities.\n",
     "\n",
-    "Ο παρακάτω αλγόριθμος υλοποιεί αυτή την ιδέα για να πάρει 1.000 δείγματα από μια τυχαία μεταβλητή με ομοιόμορφη κατανομή στον μοναδιαίο δίσκο\n",
+    "The following algorithm implements this idea to take 1,000 samples of a random variable with a uniform distribution on the unit disk\n",
     "\n",
     "$$\n",
     "D_2=\\{(x,y)\\in\\mathbb{R}^2: x^2+y^2 < 1\\}.\n",
     "$$\n",
     "\n",
-    "Η αλυσίδα ξεκινά από το μηδέν και σε κάθε βήμα δοκιμάζει μια παράλληλη μετατόπιση προς έναν από τους άξονες, \n",
-    "με ομοιόμορφη κατανομή στο (-delta, +delta). Αν η μετατόπιση αυτή αφήνει την αλυσίδα στον δίσκο, πραγματοποιείται.\n",
-    "Αν η μετατόπιση θα οδηγούσε την αλυσίδα έξω από τον δίσκο, τότε δεν πραγματοποιείται και η αλυσίδα παραμένει στη θέση που είχε την προηγούμενη χρονική στιγμή. Αφήνουμε την αλυσίδα να κάνει $N=100$ βήματα πριν πάρουμε ένα δείγμα."
+    "The chain starts from zero and at each step tries a parallel shift to one of the axes, \n",
+    "with a uniform distribution in `(-delta, +delta)`. \n",
+    "If the displacement would drive the chain out of the disk, it is not realized and the chain remains in the position it was in at the previous time. We allow the chain to take $N=100$ steps before taking a sample."
    ]
   },
   {
