--- a/Notebooks/MarkovChainMonteCarloSampling.ipynb
+++ b/Notebooks/MarkovChainMonteCarloSampling.ipynb
@@ -40,6 +40,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -107,7 +114,7 @@
     "\n",
     "In particular, for a irreducible Markov chain with symmetric transition probabilities, the only invariant distribution is the uniform distribution in state space. Indeed, because the transition probabilities are symmetric the transition probability matrix will be doubly stochastic. Therefore, in order to randomly select a point from a space $D$, we can consider a Markovian chain that evolves in $D$, has symmetric transition probabilities and let it take enough steps to come close to its equilibrium state. \n",
     "\n",
-    "One way to achieve this is as follows. Let $X_n= x\\in D$. We will try to move by $z$ where the step distribution $z$ is symmetric around 0. If the point $x+z$ remains inside $D$ we will make the move, i.e. we will define $X_{n+1}=x+z$, otherwise we will remain in $x$, i.e. we will define $X_{n+1}=x$. Convince yourself that this mechanism produces symmetric transition probabilities.\n",
+    "One way to achieve this is as follows. Let $X_n= x\\in D$. We will try to move by $z$ where the step distribution $z$ is symmetric around 0. If the point $x+z$ remains inside $D$ we will make the move, i.e. we will define $X_{n+1}=x+z$, otherwise we will remain in $x$, i.e. we will define $X_{n+1}=x$. \n",
     "\n",
     "The following algorithm implements this idea to take 1,000 samples of a random variable with a uniform distribution on the unit disk\n",
     "\n",
