--- a/Notebooks/MarkovChainMonteCarloSampling.ipynb
+++ b/Notebooks/MarkovChainMonteCarloSampling.ipynb
@@ -31,19 +31,12 @@
    "source": [
     "# Rejection sampling in large dimensions.\n",
     "\n",
-    "Already knowing how to uniformly select a sample from a surface $D$ in the plane, the area of any disk can easily be calculated. This method can be extended in an obvious way to more dimensions. The idea is that if a point is randomly taken inside the cube with center 0 and side 2, then the probability of this point being inside the unit ball is \n",
+    "Already knowing how to uniformly select a sample from a surface $D$ in the plane, the area of any disk can easily be calculated. This method can be extended in an obvious way to more dimensions. The idea is that if a point is randomly taken inside the cube with center 0 and edge length 2, then the probability of this point being inside the unit ball is \n",
     "\n",
     "$$p(d)=\\frac{\\omega(d)}{2^d}.$$\n",
     "\n",
     "So if a large number $N$ of points is taken inside the cube, by the law of large numbers, the percentage of them that will \"fall\" into the ball is a good estimate of $p(d)$. This is exactly what the *vol* function defined in the routine below does."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -110,11 +103,11 @@
    "metadata": {},
    "source": [
     "#### Sampling with MCMC\n",
-    "The rejection method is not practical for sampling from a large-dimensional sphere. This problem can be solved using ideas from Markov Chain Monte Carlo (MCMC)\n",
+    "The rejection method is not practical for sampling from a large-dimensional sphere. This problem can be solved using ideas from Markov Chain Monte Carlo (MCMC).\n",
     "\n",
-    "In particular, for a irreducible Markov chain with symmetric transition probabilities, the only invariant distribution is the uniform distribution in state space. Indeed, because the transition probabilities are symmetric the transition probability matrix will be doubly stochastic. Therefore, in order to randomly select a point from a space $D$, we can consider a Markovian chain that evolves in $D$, has symmetric transition probabilities and let it take enough steps to come close to its equilibrium state. \n",
+    "In particular, for a irreducible Markov chain with symmetric transition probabilities, the only invariant distribution is the uniform distribution in state space. Indeed, because the transition probabilities are symmetric the transition probability matrix will be doubly stochastic. Therefore, in order to randomly select a point from a space $D$, a Markovian chain that evolves in $D$ can be considered, with symmetric transition probabilities and enough steps for it to come close to its equilibrium state. \n",
     "\n",
-    "One way to achieve this is as follows. Let $X_n= x\\in D$. We will try to move by $z$ where the step distribution $z$ is symmetric around 0. If the point $x+z$ remains inside $D$ we will make the move, i.e. we will define $X_{n+1}=x+z$, otherwise we will remain in $x$, i.e. we will define $X_{n+1}=x$. \n",
+    "One way to achieve this is as follows. Let $X_n= x\\in D$. Displacement by $z$ where the step distribution $z$ is symmetric around 0 can have two outcomes. The fisrt outcome is making the move, if the point $x+z$ remains inside $D$, i.e. defining $X_{n+1}=x+z$. The second outcome is remaining in $x$, i.e. defining $X_{n+1}=x$. \n",
     "\n",
     "The following algorithm implements this idea to take 1,000 samples of a random variable with a uniform distribution on the unit disk\n",
     "\n",
@@ -124,7 +117,7 @@
     "\n",
     "The chain starts from zero and at each step tries a parallel shift to one of the axes, \n",
     "with a uniform distribution in `(-delta, +delta)`. \n",
-    "If the displacement would drive the chain out of the disk, it is not realized and the chain remains in the position it was in at the previous time. We allow the chain to take $N=100$ steps before taking a sample."
+    "If the displacement would drive the chain out of the disk, it is not realized and the chain remains in the position it was in at the previous time. The chain takes $N=100$ steps before sampling."
    ]
   },
   {
@@ -172,20 +165,20 @@
     "\n",
     "$$ \\frac{|D_3|}{|C_3|}= \\frac{|D_3|}{2|D_2|}$$\n",
     "\n",
-    "since the volume of the cylinder $|C_2|$ is the base surface area ($|D_2||$) times its height (2). Using samples from cylinder $C_3$ and counting how many of them fell into $D_2$ we can therefore estimate the ratio $|D_3|/|D_2|$.\n",
+    "since the volume of the cylinder $|C_2|$ is the base surface area ($|D_2||$) times its height (2). Using samples from cylinder $C_3$ and by counting how many of them fell into $D_2$ an estimation for the ratio $|D_3|/|D_2|$ can be done.\n",
     "\n",
     "This procedure can be generalized to $d$ dimensions without problem. It is not difficult to modify the above algorithm to take random points in the $d$-dimensional unit ball\n",
     "\n",
     "$$ D_d = \\{(x_1,\\ldots,x_{d})\\in\\mathbb{R}^{d}:\\ x_1^2+\\cdots+x_d^2 <1\\}.$$ \n",
     "\n",
-    "The chain by construction remains inside the $D_d$ ball, so the only problem we have to solve is to let the chain take enough steps to get close to equilibrium. \n",
+    "The chain by construction remains inside the $D_d$ ball, it is imprtant to let the chain take enough steps to get close to equilibrium. \n",
     "Then just by taking random points from the cylinder \n",
     "\n",
     "$$\n",
-    "C_{d+1}=\\{\\,(x_1,\\ldots,x_{d+1})\\in\\mathbb{R}^{d+1}:(x_1,\\ldots,x_d)\\in D_d,\\, |x_{d+1} | <1\\}.\n",
+    "C_{d+1}=\\{\\,(x_1,\\ldots,x_{d+1})\\in\\mathbb{R}^{d+1}:(x_1,\\ldots,x_d)\\in D_d,\\, |x_{d+1} | <1\\}\n",
     "$$\n",
     "\n",
-    "choosing their first $d$ coordinates uniformly in $D_d$ and the last one uniformly in (-1,1) the volume can be estimated.\n",
+    "and by choosing their first $d$ coordinates uniformly in $D_d$ and the last one uniformly in (-1,1) the volume can be estimated.\n",
     "The percentage of these points falling inside the ball $D_{d+1}$ can give us an estimate of the ratio $|D_{d+1}|/|D_d|$."
    ]
   },
@@ -199,7 +192,7 @@
     "\n",
     "ii) Plot the graph $d- \\log p(d)$ for the theoretical value of the probability $p(d)$ (notice that the relative error of the estimate in (i) gets larger as the dimensions increase).\n",
     "\n",
-    "From the above we see that *in large dimensions, the fraction of the unit cube occupied by the ball inscribed in it is very small*. That is, in large dimensions, most of the points of the unit cube are located at its \"corners\". This is perhaps contrary to the intuition we have from 2 and 3 dimensions."
+    "*In large dimensions, the fraction of the unit cube occupied by the ball inscribed in it is very small*. That is, in large dimensions, most of the points of the unit cube are located at its \"corners\". This is perhaps counter intuitive given the results from 2 and 3 dimensions."
    ]
   },
   {
@@ -428,7 +421,7 @@
    "source": [
     "#### (i)\n",
     "\n",
-    "The graphs above have been plotted for `samples=1000` and for `delta=1.0, 0.01 & 20.0` respectively. We observe that for `delta=1.0` the points are distributed uniformly over the entire area of the unit disk, while for the other two values (`delta=0.01` and `delta=20.0`) the 1000 points (samples) show peculiar distributions within the same area. In particular, for `delta = 0.01`, the points are all concentrated near the beginning of the axes (0,0), which is due to the jumps z according to the formula: `z = r. uniform(-delta,delta)` and `x_prop_k = x[k] + z`, i.e. the variable z is a variable which takes values (randomly w.r.t the uniform distribution) within the interval (-0.01,0.01). Therefore, with such small jumps the points appear concentrated in a neighborhood of (0,0). As for the case where `delta = 20.0`, we observe in the corresponding graph that the experimental points show a preference on the `x=0` and `y=0` axes over the other points on the unit disk. That is, for large values of delta, the experimental points seem to cluster back on the `x=0` and `y=0` axes, which may be due to the interval (-20.0,20.0) in which the variable z takes values. All the numbers within this interval have the same probability of being chosen according to the uniform distribution, in our case we accept only the numbers that satisfy the condition: `R_sqprop < 1.0`, where `R_sqprop` is the square of the distance of the (new) point after the jump z from the origin of the axes."
+    "The graphs above have been plotted for `samples=1000` and for `delta=1.0, 0.01 & 20.0` respectively. Notice that for `delta=1.0` the points are distributed uniformly over the entire area of the unit disk, while for the other two values (`delta=0.01` and `delta=20.0`) the 1000 points (samples) show peculiar distributions within the same area. In particular, for `delta = 0.01`, the points are all concentrated near the beginning of the axes (0,0), which is due to the jumps z according to the formula: `z = r. uniform(-delta,delta)` and `x_prop_k = x[k] + z`, i.e. the variable z is a variable which takes values (randomly w.r.t the uniform distribution) within the interval (-0.01,0.01). Therefore, with such small jumps the points appear concentrated in a neighborhood of (0,0). As for the case where `delta = 20.0`, in the corresponding graph the experimental points show a preference on the `x=0` and `y=0` axes over the other points on the unit disk. That is, for large values of delta, the experimental points seem to cluster on the `x=0` and `y=0` axes, which may be due to the interval (-20.0,20.0) in which the variable z takes values. All the numbers within this interval have the same probability of being chosen according to the uniform distribution, in this case only the numbers that satisfy the condition: `R_sqprop < 1.0`, get accepted, where `R_sqprop` is the square of the distance of the (new) point after the jump z from the origin of the axes."
    ]
   },
   {
@@ -456,7 +449,7 @@
     "            R_sqprop = R_sq - x[k]**2+ x_prop_k**2  ## compute the squared distance from 0 after the proposed jump \n",
     "            if(R_sqprop < 1.0): \n",
     "                R_sq = R_sqprop\n",
-    "                x[k]= x_prop_k                      ## if the proposed jump leads to a point in the disc, then jump\n",
+    "                x[k]= x_prop_k                      ## if the proposed jump leads to a point in the disk, then jump\n",
     "                nhits+=1                            ## checking if R_sqprop < 1.0 after equilibrium. \n",
     "    return(nhits/(N*samples))                       ## probability of the speciment to hit the untitary sphere of d-dimensions\n",
     "###########################################################################################"
