--- a/Notebooks/ErgodicTheorem.ipynb
+++ b/Notebooks/ErgodicTheorem.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "This exercise simulates a Markov Chain in $\\mathbb{X}=\\{0,1,2, \\dots\\}$ with transition probabilities\n",
     "\n",
-    "$$p(k,k+1)=p<1 \\text{ and } p(k,0)=1-p \\ \\forall \\ k \\ \\in \\ \\mathbb{X},$$ \n",
+    "$$p(k,k+1)=p<1 \\quad \\text{and} \\quad p(k,0)=1-p \\ \\forall \\ k \\ \\in \\ \\mathbb{X},$$ \n",
     "\n",
     "for $p = 1/2$.\n",
     "\n",
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "# Application 1\n",
+    "# Application\n",
     "# Question (1)\n",
     "#######################################################################################\n",
     "# Arithmetic approximation.\n",
