--- a/Notebooks/ErgodicTheorem.ipynb
+++ b/Notebooks/ErgodicTheorem.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "This chain in the state space $ \\mathbb{N} \\cup \\{0\\}$ is non-degenerate and recurrent, with an invariant distribution which is given by\n",
     "\n",
-    "$$ \\pi(k) = \\frac{1}{2^{k+1}}, \\quad k = 0, 1, 2, 2, 3, ... .$$\n",
+    "$$ \\pi(k) = \\frac{1}{2^{k+1}}, \\quad k = 0, 1, 2, 3, ... .$$\n",
     "\n",
     "The code in the cell below simulates the first $N = 10^4$ steps of the chain \n",
     "and returns the mean\n",
