--- a/Notebooks/TravellingSalesmanProblem.ipynb
+++ b/Notebooks/TravellingSalesmanProblem.ipynb
@@ -173,9 +173,9 @@
    "source": [
     "The parameters of the `sim_anneal` function are:\n",
     "\n",
-    "* **``f`**: the function to be minimized\n",
+    "* **`f`**: the function to be minimized\n",
     "* **`x_low, x_high`**: The lower and upper value bounding the minimum\n",
-    "* **``T, T_min`**: The initial and final annealing temperatures\n",
+    "* **`T, T_min`**: The initial and final annealing temperatures\n",
     "* ** **`cool_factor`**: How much the temperature decreases in each cooling cycle (percentage of the previous one)\n",
     "* **`cool_sch`**: How many steps to reduce the temperature (%) (% of the total number of times the temperature is reduced (%) (* **`cool_sch`**)\n",
     "* **`delta`**: \"Jumping\" radius\n",
