--- a/Notebooks/TravellingSalesmanProblem.ipynb
+++ b/Notebooks/TravellingSalesmanProblem.ipynb
@@ -176,12 +176,12 @@
     "* **`f`**: the function to be minimized\n",
     "* **`x_low, x_high`**: The lower and upper value bounding the minimum\n",
     "* **`T, T_min`**: The initial and final annealing temperatures\n",
-    "* ** **`cool_factor`**: How much the temperature decreases in each cooling cycle (percentage of the previous one)\n",
-    "* **`cool_sch`**: How many steps to reduce the temperature (%) (% of the total number of times the temperature is reduced (%) (* **`cool_sch`**)\n",
+    "* **`cool_factor`**: How much the temperature decreases in each cooling cycle (percentage of the previous one)\n",
+    "* **`cool_sch`**: How many steps to reduce the temperature (%) (% of the total number of times the temperature is reduced (%) (**`cool_sch`**)\n",
     "* **`delta`**: \"Jumping\" radius\n",
-    "* ** **`shrink_factor`**: How much to reduce `delta` if we see that the method is stuck\n",
-    "* ** **`shirnk_thres`**: Percentage of successful jumps below which we consider the particle to be stuck.\n",
-    "* ** **`trace`**: Tracing the whole route or just the final position\n",
+    "* **`shrink_factor`**: How much to reduce `delta` if we see that the method is stuck\n",
+    "* **`shirnk_thres`**: Percentage of successful jumps below which we consider the particle to be stuck.\n",
+    "* **`trace`**: Tracing the whole route or just the final position\n",
     "\n",
     "Therefore to compute the minimum of the $V$ function in the interval $(-3.5, 3.5)$ the function is executed with the following parameters.\n",
     "\n",
